--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format:check": "prettier --check ."
   },
   "dependencies": {
+    "tailwind": "^4.0.0",
     "vue": "^3.2.37",
     "vue-router": "^4.1.5"
   },
@@ -32,6 +33,6 @@
     "prettier": "2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
     "tailwindcss": "^3.1.8",
-    "vite": "^3.0.0"
+    "vite": "^3.2.4"
   }
 }
