--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "format:check": "prettier --check ."
   },
   "dependencies": {
+    "@vueuse/firebase": "^9.6.0",
+    "firebase": "^9.14.0",
     "tailwind": "^4.0.0",
     "vue": "^3.2.37",
     "vue-router": "^4.1.5"
