--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@vueuse/firebase": "^9.6.0",
     "firebase": "^9.14.0",
+    "nanoid": "^4.0.0",
     "tailwind": "^4.0.0",
     "vue": "^3.2.37",
     "vue-router": "^4.1.5"
