--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format:check": "prettier --check ."
   },
   "dependencies": {
+    "@vueuse/core": "^9.6.0",
     "@vueuse/firebase": "^9.6.0",
     "firebase": "^9.14.0",
     "nanoid": "^4.0.0",
